<resources>
    <string name="app_name">Star Movie</string>
    <string name="popular_sort">最受欢迎</string>
    <string name="rating_sort">评分最高</string>
    <string name="error_message">结果错误</string>
    <string name="more_message">更多信息</string>
    <string name="movie_date">上映日期：</string>
    <string name="movie_type">类型:</string>
    <string name="movie_revenue">票房:</string>
    <string name="movie_runtime">片长：</string>
    <string name="movie_status">状态:</string>
    <string name="pic_status">电影图片</string>
    <string name="user_collection">用户收藏</string>
    <string name="settings">设置</string>
    <string name="reflash">更新数据</string>
    <string name="summay">地球陷入毁灭危机，擎天柱失踪，越来越多的汽车人和霸天虎来到地球，前海豹突击队成员威廉·伦诺克斯
        （ 乔什·杜哈明饰）成为了政府军组建的TRF中的一员，负责绞杀地球上的汽车人——不论好坏。在芝加哥街头，伦诺克斯遇到了凯德
        ·伊格尔（马克·沃尔伯格饰）孤儿伊莎贝拉（伊莎贝拉·莫奈饰）。 凯德因为帮助、支持汽车人而成为政府通缉犯，所以他在一个垃
        圾场看管着一群幸存的汽车人。与此同时，失踪的擎天柱被女巫昆塔莎黑化，要毁灭地球。拯救世界的责任于是落在了这支由凯德为首
        的非同寻常的队伍身上，大黄蜂、一位英国爵士（安东尼·霍普金斯饰）还有一位牛津大学教授（劳拉·哈德克饰），一场史诗浩劫彻底
        将地球变成了战场 。</string>

    <string name="pref_sort_label">排序方式</string>
    <string name="pref_sort_key" translatable="false">sort</string>

    <string name="pref_sort_by_pop_value" translatable="false">pop</string>
    <string name="pref_sort_by_top_value" translatable="false">top</string>
    <string name="pref_sort_by_col_value" translatable="false">col</string>
    <string name="pref_sort_by_pop_label">热门</string>
    <string name="pref_sort_by_top_label">评分</string>
    <string name="pref_sort_by_col_label">收藏</string>



</resources>
