<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moming.jml.starmovie.MovieDetailActivity"
    android:background="#786239">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:text="@string/error_message"
        android:visibility="invisible"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:id="@+id/tv_error_message_in_detail"/>
    <ProgressBar
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:id="@+id/pb_loading_indicator_in_detail"
        android:visibility="invisible"
        android:layout_gravity="center|center_vertical"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ShadowStyle"
            android:elevation="4dp"
            android:id="@+id/layout_of_movie_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_name_in_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="18dp"
                    tools:text="变形金刚"
                    android:textSize="@dimen/title_text_size" />

                <ImageView
                    android:id="@+id/iv_movie_banner"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_movie"
                    android:contentDescription="@string/pic_status"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_runtime"
                        style="@style/TextStyleInDetail"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text=" 120 分钟"
                        style="@style/TextStyleInDetail"
                        android:id="@+id/tv_movie_runtime_in_detail"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_date"
                        style="@style/TextStyleInDetail"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2015年05月07日"
                        style="@style/TextStyleInDetail"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:id="@+id/tv_movie_date_in_detail"/>
                </LinearLayout>



                <TextView
                    android:id="@+id/tv_movie_summary_in_detail"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:lines="6"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/summay"
                    android:textColor="#b1b1b1"
                    android:textSize="@dimen/default_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:textSize="16sp"
                    android:text="@string/more_message"
                    android:gravity="center|center_horizontal"
                    android:layout_gravity="bottom"
                    android:background="#ececee"
                    android:textColor="#878787"
                    android:id="@+id/tv_more_message"

                    />

            </LinearLayout>



        </FrameLayout>
    </ScrollView>






</FrameLayout>
