<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moming.jml.starmovie.MovieDetailActivity"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="查看你喜欢的电影吧！"
        android:textSize="24sp"
        android:gravity="center"
        android:visibility="invisible"
        android:id="@+id/tv_pad_default"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/sv_movie_detail"
        android:visibility="visible">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ShadowStyle"
            android:elevation="2dp"
            android:id="@+id/layout_of_movie_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    >
                    <TextView
                        android:id="@+id/tv_movie_name_in_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        tools:text="变形金刚"
                        android:layout_gravity="center"
                        android:textSize="@dimen/title_text_size" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center"
                        android:layout_height="32dp"
                        android:layout_marginTop="0dp"
                        android:background="@color/colorPrimary"
                        android:elevation="3dp"
                        android:text="收藏"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    </LinearLayout>



                <ImageView
                    android:id="@+id/iv_movie_banner"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/default_movie"
                    android:contentDescription="@string/pic_status"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_runtime"
                        style="@style/LabelStyleInDetail"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text=" 120 分钟"
                        style="@style/TextStyleInDetail"
                        android:id="@+id/tv_movie_runtime_in_detail"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_date"
                        style="@style/LabelStyleInDetail"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2015年05月07日"
                        style="@style/TextStyleInDetail"
                        android:id="@+id/tv_movie_date_in_detail"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="评分："
                        style="@style/LabelStyleInDetail"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="7.8"
                        style="@style/TextStyleInDetail"
                        android:id="@+id/tv_movie_rat_in_detail"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="简介："
                        style="@style/LabelStyleInDetail"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorLine" />


                <TextView
                    android:id="@+id/tv_movie_summary_in_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    tools:text="@string/summay"
                    android:textColor="#b1b1b1"
                    android:textSize="@dimen/normal_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="点评："
                        style="@style/LabelStyleInDetail"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="预告："
                        style="@style/LabelStyleInDetail"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:textSize="16sp"
                    android:text="@string/more_message"
                    android:gravity="center|center_horizontal"
                    android:layout_gravity="bottom"
                    android:background="#ececee"
                    android:textColor="#878787"
                    android:id="@+id/tv_more_message"

                    />

            </LinearLayout>



        </FrameLayout>
    </ScrollView>






</FrameLayout>
